err/hwit-edit.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/hwit'...
Listing './lib/python3.5/site-packages/hwit/checks'...
Listing './lib/python3.5/site-packages/hwit/checks/test'...
Listing './lib/python3.5/site-packages/hwit/core'...
Compiling './lib/python3.5/site-packages/hwit/core/console.py'...
***   File "./lib/python3.5/site-packages/hwit/core/console.py", line 189
    print "rule ", gp.rule
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hwit/core/doc'...
Compiling './lib/python3.5/site-packages/hwit/core/settings.py'...
***   File "./lib/python3.5/site-packages/hwit/core/settings.py", line 170
    print "%s\t%s\t%s" % (s, k, htmlTone(k,i))
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hwit/core/test'...
Listing './lib/python3.5/site-packages/hwit/core/test/ref'...
Listing './lib/python3.5/site-packages/hwit/core/utils'...
Compiling './lib/python3.5/site-packages/hwit/core/utils/happenstance.py'...
***   File "./lib/python3.5/site-packages/hwit/core/utils/happenstance.py", line 163
    print ''.join(f.next())
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hwit/edit'...
Compiling './lib/python3.5/site-packages/hwit/edit/app.py'...
***   File "./lib/python3.5/site-packages/hwit/edit/app.py", line 350
    except (RuntimeWarning, SyntaxWarning), w:
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hwit/edit/doc'...
Listing './lib/python3.5/site-packages/hwit/edit/test'...
Listing './lib/python3.5/site-packages/hwit_core-0.2.post672.egg-info'...
Listing './lib/python3.5/site-packages/hwit_edit-0.1.post662.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
